objects/pi__Category_Lead_Score__c.object
<CustomObject>
    <description>Used for Pardot Scoring Categories. Stores the actual category scores synced over from Pardot.

Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
    <fields>
        <fullName>pi__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Category_Lead_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Account_Id__c</fullName>
        <label>Pardot Account Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Scoring_Category__c</fullName>
        <label>Pardot Scoring Category</label>
        <referenceTo>pi__Pardot_Scoring_Category__c</referenceTo>
        <relationshipName>Category_Lead_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pi__Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Scoring_Category_Name__c</fullName>
        <formula>pi__Pardot_Scoring_Category__r.pi__Category_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scoring Category Name</label>
        <type>Text</type>
    </fields>
    <label>Pardot Category Score (Lead)</label>
    <listViews>
        <fullName>pi__All</fullName>
        <columns>NAME</columns>
        <columns>pi__Lead__c</columns>
        <columns>pi__Pardot_Scoring_Category__c</columns>
        <columns>pi__Score__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>pi__Pardot_Account_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>pi__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCLS-{0}</displayFormat>
        <label>Lead Score ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pardot Category Scores (Lead)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>